Added HomeViewModel unit test